# xanesnet-conexs

./: README.md  debug.py  environment.yml  frozen.txt  pyproject.toml  run_test.sh  setup.py  start_tensorboard.sh
tools/config-ui/: README.md  index.html  package-lock.json  package.json
xanesnet/: __init__.py  analyze.py  cli.py  core_analyze.py  core_infer.py  core_learn.py  core_predict.py  core_train.py  creator.py  infer.py  registry.py  train.py
xanesnet/analysis/: __init__.py  result.py  utils.py
xanesnet/batchprocessors/: __init__.py  base.py  descriptor_mlp.py  e3ee.py  e3ee_full.py  envembed.py  gemnet.py  gemnet_oc.py  geometrygraph_dimenet.py  geometrygraph_schnet.py  registry.py
xanesnet/checkpointing/: __init__.py  checkpointer.py
xanesnet/components/: __init__.py  activation.py  init.py  lrscheduler.py  optim.py
xanesnet/datasets/: __init__.py  _mp.py  base_dataset.py  e3eembed.py  envembed.py  graph.py  multihead.py  registry.py  transformer.py  xanesx.py
xanesnet/datasources/: __init__.py  base.py  multixyzspec.py  pmgjson.py  registry.py  xyzspec.py
xanesnet/descriptors/: __init__.py  base.py  base_descriptor.py  direct.py  mace.py  pdos.py  pdos_deprecated.py  rdc.py  registry.py  wacsf.py
xanesnet/losses/: __init__.py  base.py  bcewithlogits.py  emd.py  l1.py  mkssim1d.py  mse.py  registry.py  specplus.py  wcc.py
xanesnet/models/: __init__.py  ae_cnn.py  ae_mlp.py  aegan_mlp.py  base.py  base_model.py  cnn.py  e3eembed.py  envembed.py  gnn.py  lstm.py  mh_cnn.py  mh_gnn.py  mh_mlp.py  mlp.py  registry.py  transformer.py
xanesnet/regularizers/: __init__.py  base.py  l1.py  l2.py  no.py  registry.py
xanesnet/runners/: __init__.py  base.py
xanesnet/schemas/: analyze.schema.yaml  common.schema.yaml  infer.schema.yaml  infer_runtime.schema.yaml  train.schema.yaml
xanesnet/scheme/: __init__.py  ae_learn.py  ae_predict.py  aegan_learn.py  aegan_predict.py  base_learn.py  base_predict.py  e3ee_learn.py  e3ee_predict.py  ee_learn.py  ee_predict.py  mh_learn.py  mh_predict.py  nn_learn.py  nn_predict.py
xanesnet/serialization/: __init__.py  auto_config.py  (+11 more)
(+427 files in other folders)
