[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "XANESNET"
version = "0.1.0"
description = "Deep learning for theoretical simulation of spectra."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Hendrik Junkawitsch" },
    { name = "Thomas Penfold" },
]
keywords = [
    "xanes",
    "x-ray absorption spectroscopy",
    "machine learning",
    "deep learning",
    "materials science",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "ase>=3.23",
    "e3nn>=0.4.4",
    "h5py>=3.10",
    "jsonschema>=4.18",
    "mace-torch>=0.3.14",
    "matplotlib>=3.8",
    "numpy>=1.26,<3",
    "pymatgen>=2024.5",
    "PyYAML>=6.0",
    "scipy>=1.12",
    "sympy>=1.12",
    "tensorboard>=2.16",
    "torch>=2.5,<3",
    "torch-cluster>=1.6",
    "torch-geometric>=2.5",
    "torch-scatter>=2.1",
    "torch-sparse>=0.6",
    "torchinfo>=1.8",
    "tqdm>=4.66",
    "typing-extensions>=4.15",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8",
]
docs = [
    "Sphinx>=8",
    "furo>=2024.8",
    "sphinx-autodoc-typehints>=2.5",
]

[project.urls]
Homepage = "https://github.com/NewcastleRSE/xray-spectroscopy-ml"
Documentation = "https://xanesnet.readthedocs.io"
Repository = "https://github.com/NewcastleRSE/xray-spectroscopy-ml"

[project.scripts]
xanesnet = "xanesnet.cli:console_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xanesnet*"]

[tool.setuptools.package-data]
xanesnet = ["schemas/**/*.yaml"]
